[package]
name = "mastermind-rs"
version = "0.2.7"
authors = ["Sergey Lavrent"]
edition = "2021"
description = "A TUI game based on Mastermind/Bulls & Cows"
repository = "https://github.com/hiimsergey/mastermind-rs"
license = "GPL-3.0"
keywords = ["tui", "game", "boardgame", "board-game"]
categories = ["command-line-utilities", "games"]

[dependencies]
cursive-aligned-view = "0.6.0"
rand = "0.8.5"
webbrowser = "0.8.11"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend"]
