[package]
name = "mastermind-rs"
version = "1.0.0"
authors = ["Sergey Lavrent"]
edition = "2021"
description = "A TUI game based on Mastermind/Bulls & Cows"
repository = "https://github.com/hiimsergey/mastermind-rs"
license = "GPL-3.0"
keywords = ["tui", "game", "boardgame", "board-game"]
categories = ["command-line-utilities", "games"]

[dependencies]
fastrand = "2.0.2"

[dependencies.cursive]
version = "0.20.0"
default-features = false
# this one is best compatible with Unix and Windows, in my experience
features = ["crossterm-backend"]
